Fix object behavior and add loop toggle

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <button type="button" id="prevFrame" title="Image précédente" aria-label="Image précédente">⏮️</button>
         <button type="button" id="playAnim" title="Lire l'animation" aria-label="Lire l'animation">▶️</button>
         <button type="button" id="stopAnim" title="Arrêter" aria-label="Arrêter">⏹️</button>
+        <button type="button" id="loopToggle" title="Activer/Désactiver la boucle" aria-label="Activer ou désactiver la boucle">Loop: on</button>
         <button type="button" id="nextFrame" title="Image suivante" aria-label="Image suivante">⏭️</button>
       </div>
       <div id="timeline-slider-container">
