--- a/index.html
+++ b/index.html
@@ -1,116 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anime toi aussi ton pantin grotesque !</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="./src/interact.min.js" defer></script>
-  <script type="module" src="./src/main.js"></script>
+  <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="0; url=./src-v2/dist/index.html" />
+  <title>MACRON-O-TRON 3000</title>
 </head>
 <body>
-  <div id="app-container" class="app-container">
-    <aside id="inspector-panel" role="region" aria-label="Contrôles de l'inspecteur">
-      <h3>Inspecteur</h3>
-      <div id="selection-info">
-        <label for="selected-element-name">Sélection</label>
-        <output id="selected-element-name">Pantin</output>
-      </div>
-      <div id="pantin-controls">
-        <div class="control-group">
-          <label for="scale-value">Échelle</label>
-          <div class="value-stepper">
-            <button type="button" id="scale-minus" aria-label="Diminuer l'échelle">-</button>
-            <input type="number" id="scale-value" step="0.1" value="1.00">
-            <button type="button" id="scale-plus" aria-label="Augmenter l'échelle">+</button>
-          </div>
-        </div>
-        <div class="control-group">
-          <label for="rotate-value">Rotation</label>
-          <div class="value-stepper">
-            <button type="button" id="rotate-minus" aria-label="Diminuer la rotation">-</button>
-            <input type="number" id="rotate-value" step="1" value="0">
-            <button type="button" id="rotate-plus" aria-label="Augmenter la rotation">+</button>
-          </div>
-        </div>
-      </div>
-      <div id="object-controls" role="region" aria-label="Objets">
-        <h3>Objets</h3>
-        <div class="control-group">
-          <label for="object-asset">Ajouter</label>
-          <select id="object-asset">
-            <option value="carre.svg">carre</option>
-            <option value="faucille.svg">faucille</option>
-            <option value="marteau.svg">marteau</option>
-          </select>
-          <button type="button" id="add-object">Ajouter</button>
-        </div>
-        <div class="control-group">
-          <label for="object-list">Sélection</label>
-          <select id="object-list" size="4"></select>
-          <button type="button" id="remove-object">Supprimer</button>
-        </div>
-        <div class="control-group">
-          <label for="object-layer">Calque</label>
-          <select id="object-layer">
-            <option value="front">Devant</option>
-            <option value="back">Derrière</option>
-          </select>
-        </div>
-        <div class="control-group">
-          <label for="object-attach">Coller à</label>
-          <select id="object-attach">
-            <option value="">Aucun</option>
-          </select>
-        </div>
-      </div>
-      <div id="onion-skin-controls" role="region" aria-label="Contrôles Onion Skin">
-        <h3>Onion Skin</h3>
-        <div class="control-group">
-          <input type="checkbox" id="onion-skin-toggle">
-          <label for="onion-skin-toggle">Activer</label>
-        </div>
-        <div class="control-group">
-          <label for="past-frames">Images passées</label>
-          <input type="number" id="past-frames" value="1" min="0" max="10">
-        </div>
-        <div class="control-group">
-          <label for="future-frames">Images futures</label>
-          <input type="number" id="future-frames" value="1" min="0" max="10">
-        </div>
-      </div>
-    </aside>
-    <main id="theatre" role="main"></main>
-    <footer id="timeline-panel" role="contentinfo">
-      <div id="timeline-controls">
-        <button type="button" id="prevFrame" title="Image précédente" aria-label="Image précédente">⏮️</button>
-        <button type="button" id="playAnim" title="Lire l'animation" aria-label="Lire l'animation">▶️</button>
-        <button type="button" id="stopAnim" title="Arrêter" aria-label="Arrêter">⏹️</button>
-        <button type="button" id="loopToggle" title="Boucle activée" aria-label="Activer ou désactiver la boucle">🔁</button>
-        <button type="button" id="nextFrame" title="Image suivante" aria-label="Image suivante">⏭️</button>
-      </div>
-      <div id="timeline-slider-container">
-        <label for="timeline-slider" class="sr-only">Timeline</label>
-        <input type="range" id="timeline-slider" min="0" max="0" step="1" value="0">
-        <output id="frameInfo" for="timeline-slider" aria-live="polite">1 / 1</output>
-      </div>
-      <div id="timeline-actions">
-        <div class="control-group fps-control">
-          <label for="fps-input">FPS</label>
-          <input type="number" id="fps-input" value="10" min="1" max="60">
-        </div>
-        <button type="button" id="addFrame" title="Ajouter une image" aria-label="Ajouter une image">➕</button>
-        <button type="button" id="delFrame" title="Supprimer l'image" aria-label="Supprimer l'image">🗑️</button>
-      </div>
-      <div id="app-actions">
-        <button type="button" id="inspector-toggle-btn" title="Afficher/Masquer l'inspecteur" aria-label="Afficher/Masquer l'inspecteur">↔️</button>
-        <button type="button" id="exportAnim" title="Exporter l'animation" aria-label="Exporter l'animation">💾 Export</button>
-        <label for="importAnim" id="importAnimBtn" class="button" tabindex="0" aria-label="Importer l'animation">📂 Import</label>
-        <input type="file" id="importAnim" accept=".json" style="display:none">
-        <button type="button" id="resetStorage" title="Réinitialiser le projet" aria-label="Réinitialiser le projet">⚠️</button>
-      </div>
-    </footer>
-  </div>
+  <noscript>JavaScript requis pour exécuter cette application.</noscript>
 </body>
 </html>
-
